force-app/main/default/objects/Entitlement__c/Entitlement__c.object-meta.xml
<CustomObject>
    <description>Service Cloud : Contains Entitlement Information relevant to the Customer. Used to display Entitlement Information in the Communities. Will be used in Community Search as well.</description>
    <label>Entitlement</label>
    <nameField>
        <label>Entitlement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Entitlements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>