force-app/main/default/objects/Entitlement__c/fields/AssetName__c.field-meta.xml
<CustomField>
    <fullName>AssetName__c</fullName>
    <formula>Entitlement__r.Subscription__r.SBQQ__ProductName__c</formula>
    <label>Asset</label>
    <type>Text</type>
</CustomField>