force-app/main/default/objects/Entitlement__c/fields/Days_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Days_Remaining__c</fullName>
    <formula>IF((End_Date__c - TODAY() ) &gt;90,
IMAGE(&quot;/img/msg_icons/confirm24.png&quot;,&quot;Green&quot;) &amp; &quot; &quot; &amp; TEXT((End_Date__c - TODAY() )),
IF((End_Date__c - TODAY()) &lt;=90 &amp;&amp; (End_Date__c - TODAY()) &gt;=30,
IMAGE(&quot;/img/msg_icons/warning24.png&quot;,&quot;Yellow&quot;) &amp; &quot; &quot; &amp; TEXT((End_Date__c - TODAY() )),
IMAGE(&quot;/img/msg_icons/error24.png&quot;,&quot;Red&quot;) &amp; &quot; &quot; &amp; TEXT((End_Date__c - TODAY() ))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Days remaining to Entitlement Expiry / End date</inlineHelpText>
    <label>Days Remaining</label>
    <type>Text</type>
</CustomField>