force-app/main/default/objects/Entitlement__c/fields/Ent_Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Ent_Last_Modified_Date__c</fullName>
    <formula>Entitlement__r.LastModifiedDate</formula>
    <label>Ent Last Modified Date</label>
    <type>Date</type>
</CustomField>