force-app/main/default/objects/Entitlement__c/fields/Entitlement_Count__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_Count__c</fullName>
    <description>Count up Entitlements for reporting</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Count up Entitlements for reporting</inlineHelpText>
    <label>Entitlement Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>