force-app/main/default/objects/Entitlement__c/fields/Entitlement_ID__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_ID__c</fullName>
    <formula>Entitlement__r.Entitlement_ID_SAP__c</formula>
    <label>Entitlement ID</label>
    <type>Text</type>
</CustomField>