force-app/main/default/objects/Entitlement__c/fields/Hardware_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Hardware_Serial_Number__c</fullName>
    <formula>Entitlement__r.Hardware_Serial_Number__c</formula>
    <label>Hardware Serial Number</label>
    <type>Text</type>
</CustomField>