force-app/main/default/objects/Entitlement__c/fields/Hostname__c.field-meta.xml
<CustomField>
    <fullName>Hostname__c</fullName>
    <label>Hostname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>