force-app/main/default/objects/Entitlement__c/fields/Name_Synced__c.field-meta.xml
<CustomField>
    <fullName>Name_Synced__c</fullName>
    <formula>Name = Entitlement__r.Name</formula>
    <label>Name Synced?</label>
    <type>Checkbox</type>
</CustomField>