force-app/main/default/objects/Entitlement__c/fields/Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Type__c</fullName>
    <formula>TEXT(Entitlement__r.Order_Type__c)</formula>
    <label>Order Type</label>
    <type>Text</type>
</CustomField>