force-app/main/default/objects/Entitlement__c/fields/PAK_ID__c.field-meta.xml
<CustomField>
    <fullName>PAK_ID__c</fullName>
    <formula>Entitlement__r.PAK_ID__c</formula>
    <label>PAK ID</label>
    <type>Text</type>
</CustomField>