force-app/main/default/objects/Entitlement__c/fields/Product_Description__c.field-meta.xml
<CustomField>
    <fullName>Product_Description__c</fullName>
    <formula>Entitlement__r.Product_Description__c</formula>
    <label>Product Description</label>
    <type>Text</type>
</CustomField>