force-app/main/default/objects/Entitlement__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <formula>TEXT( Entitlement__r.Service_Product__r.Product_Line__c )</formula>
    <label>Product Line</label>
    <type>Text</type>
</CustomField>