force-app/main/default/objects/Entitlement__c/fields/Renewed_Entitlement_ID__c.field-meta.xml
<CustomField>
    <fullName>Renewed_Entitlement_ID__c</fullName>
    <formula>Entitlement__r.Renewed_Entitlement_ID__c</formula>
    <label>Renewed Entitlement ID</label>
    <type>Text</type>
</CustomField>