force-app/main/default/objects/Entitlement__c/fields/Renewed_PAK_ID__c.field-meta.xml
<CustomField>
    <fullName>Renewed_PAK_ID__c</fullName>
    <description>Rename this to Renewed PAK ID in future.</description>
    <formula>Entitlement__r.Renewed_PAK_ID__c</formula>
    <label>Renewed PAK ID</label>
    <type>Text</type>
</CustomField>