force-app/main/default/objects/Entitlement__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <formula>Entitlement__r.StartDate</formula>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>