force-app/main/default/objects/Entitlement__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>Equipment State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>