force-app/main/default/objects/Entitlement__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>Entitlement__r.Entitlement_Status__c</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>