force-app/main/default/objects/Entitlement__c/fields/Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Postal_Code__c</fullName>
    <label>Equipment Zip/Postal Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>