force-app/main/default/objects/Entitlement__c/validationRules/Entitlement_Name_cannot_be_edited_Std.validationRule-meta.xml
<ValidationRule>
    <fullName>Entitlement_Name_cannot_be_edited_Std</fullName>
    <active>false</active>
    <errorConditionFormula>(ISCHANGED( Name ) || ISCHANGED(  Account__c  )) &amp;&amp;   ($Profile.Name != &apos;System Administrator&apos; &amp;&amp; $Profile.Name != &apos;SVC SAP Integration&apos; &amp;&amp; NOT($Permission.Service_Cloud_Allow_Edit_Entitlement_Name))</errorConditionFormula>
    <errorMessage>Entitlement Name and Account Name cannot be edited.</errorMessage>
</ValidationRule>