force-app/main/default/objects/Entitlement__c/listViews/Active_Entitlements.listView-meta.xml
<ListView>
    <fullName>Active_Entitlements</fullName>
    <columns>NAME</columns>
    <columns>Product_Line__c</columns>
    <columns>End_Date__c</columns>
    <columns>Days_Remaining__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active Entitlements</label>
    <language>en_US</language>
</ListView>