force-app/main/default/objects/Entitlement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Product_Line__c</columns>
    <columns>End_Date__c</columns>
    <columns>Days_Remaining__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Removed</value>
    </filters>
    <filters>
        <field>Order_Type__c</field>
        <operation>equals</operation>
        <value>ZMRS</value>
    </filters>
    <label>All</label>
    <language>en_US</language>
</ListView>