force-app/main/default/objects/Entitlement__c/listViews/DGX_Entitlements.listView-meta.xml
<ListView>
    <fullName>DGX_Entitlements</fullName>
    <booleanFilter>1 AND (2 OR 3)</booleanFilter>
    <columns>NAME</columns>
    <columns>Hardware_Serial_Number__c</columns>
    <columns>Status__c</columns>
    <columns>End_Date__c</columns>
    <columns>Street_1__c</columns>
    <columns>Street_2__c</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <columns>Zip_Postal_Code__c</columns>
    <columns>Country__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Line__c</field>
        <operation>equals</operation>
        <value>DGX</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Removed</value>
    </filters>
    <filters>
        <field>Order_Type__c</field>
        <operation>equals</operation>
        <value>ZMRS</value>
    </filters>
    <label>DGX Entitlements</label>
    <language>en_US</language>
</ListView>