force-app/main/default/objects/Entitlement__c/listViews/Expired_Entitlements.listView-meta.xml
<ListView>
    <fullName>Expired_Entitlements</fullName>
    <columns>NAME</columns>
    <columns>Product_Line__c</columns>
    <columns>End_Date__c</columns>
    <columns>Days_Remaining__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Expired</value>
    </filters>
    <label>Expired Entitlements</label>
    <language>en_US</language>
</ListView>