force-app/main/default/objects/Entitlement__c/listViews/Not_Syned.listView-meta.xml
<ListView>
    <fullName>Not_Syned</fullName>
    <columns>NAME</columns>
    <columns>Entitlement__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Product_Line__c</columns>
    <columns>End_Date__c</columns>
    <columns>Days_Remaining__c</columns>
    <columns>Ent_Last_Modified_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Name_Synced__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Not Syned</label>
    <language>en_US</language>
</ListView>